--- a/apply_bert.ipynb
+++ b/apply_bert.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_anaphoric_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/non_anaphoric_it.csv'\n",
+    "non_anaphoric_path = '../data/non_anaphoric_it.csv'\n",
     "non_anaphoric_df = pd.read_csv(non_anaphoric_path, delimiter=',')"
    ]
   },
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/non_anaphoric_it_bert_preds.csv'\n",
+    "target_path = '../data/non_anaphoric_it_bert_preds.csv'\n",
     "non_anaphoric_df.to_csv(target_path)"
    ]
   },
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/number_position_synt_role.csv'\n",
+    "num_path = '../data/number_position_synt_role.csv'\n",
     "num_df = pd.read_csv(num_path, delimiter=',')\n",
     "num_df.rename(columns={'sentence':'sentences'}, inplace=True)"
    ]
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_num_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/number_position_synt_role_bert_preds.csv'\n",
+    "target_num_path = '../data/number_position_synt_role_bert_preds.csv'\n",
     "num_df.to_csv(target_num_path)"
    ]
   },
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gender_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/gender_anaphortype_ambiguity.csv'\n",
+    "gender_path = '../data/gender_anaphortype_ambiguity.csv'\n",
     "gender_df = pd.read_csv(gender_path, delimiter = \",\")"
    ]
   },
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_gender_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/gender_anaphortype_ambiguity_bert_preds.csv'\n",
+    "target_gender_path = '../data/gender_anaphortype_ambiguity_bert_preds.csv'\n",
     "gender_df.to_csv(target_gender_path)"
    ]
   },
