--- a/apply_spacy.ipynb
+++ b/apply_spacy.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_anaphoric_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/non_anaphoric_it.csv'\n",
+    "non_anaphoric_path = '../data/non_anaphoric_it.csv'\n",
     "non_anaphoric_df = pd.read_csv(non_anaphoric_path, delimiter=',')\n",
     "predict_neuralcoref(non_anaphoric_df)"
    ]
@@ -61,7 +61,7 @@
     "evaluate_non_anaphoric_it(non_anaphoric_df)\n",
     "#all results are correct\n",
     "\n",
-    "target_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/non_anaphoric_it_spacy_preds.csv'\n",
+    "target_path = '../data/non_anaphoric_it_spacy_preds.csv'\n",
     "non_anaphoric_df.to_csv(target_path)"
    ]
   },
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gender_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/gender_anaphortype_ambiguity.csv'\n",
+    "gender_path = '../data/gender_anaphortype_ambiguity.csv'\n",
     "gender_df = pd.read_csv(gender_path, delimiter=',')"
    ]
   },
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_gender_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/gender_anaphortype_ambiguity_spacy_preds.csv'\n",
+    "target_gender_path = '../data/gender_anaphortype_ambiguity_spacy_preds.csv'\n",
     "gender_df.to_csv(target_gender_path)"
    ]
   },
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/number_position_synt_role.csv'\n",
+    "num_path = '../data/number_position_synt_role.csv'\n",
     "num_df = pd.read_csv(num_path, delimiter=',')\n",
     "num_df.rename(columns={'sentence':'sentences'}, inplace=True)"
    ]
@@ -152,25 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_num_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/number_position_synt_role_spacy_preds.csv'\n",
+    "target_num_path = '../data/number_position_synt_role_spacy_preds.csv'\n",
     "num_df.to_csv(target_num_path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
