--- a/comparisons.ipynb
+++ b/comparisons.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_anaphoric_spacy_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/non_anaphoric_it_spacy_preds.csv'\n",
-    "non_anaphoric_bert_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/non_anaphoric_it_bert_preds.csv'\n",
+    "non_anaphoric_spacy_path = '../data/non_anaphoric_it_spacy_preds.csv'\n",
+    "non_anaphoric_bert_path = '../data/non_anaphoric_it_bert_preds.csv'\n",
     "\n",
     "non_anaphoric_spacy_df = pd.read_csv(non_anaphoric_spacy_path, delimiter=\",\")\n",
     "non_anaphoric_bert_df = pd.read_csv(non_anaphoric_bert_path, delimiter=',')"
@@ -91,9 +91,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_spacy_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/number_position_synt_role_spacy_preds.csv'\n",
+    "num_spacy_path = '../data/number_position_synt_role_spacy_preds.csv'\n",
     "num_spacy_df = pd.read_csv(num_spacy_path, delimiter=',')\n",
-    "num_bert_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/number_position_synt_role_bert_preds.csv'\n",
+    "num_bert_path = '../data/number_position_synt_role_bert_preds.csv'\n",
     "num_bert_df = pd.read_csv(num_bert_path, delimiter=',')"
    ]
   },
@@ -283,9 +283,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gender_spacy_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/gender_anaphortype_ambiguity_spacy_preds.csv'\n",
+    "gender_spacy_path = '../data/gender_anaphortype_ambiguity_spacy_preds.csv'\n",
     "gender_spacy_df = pd.read_csv(gender_spacy_path, delimiter=',')\n",
-    "gender_bert_path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/gender_anaphortype_ambiguity_bert_preds.csv'\n",
+    "gender_bert_path = '../data/gender_anaphortype_ambiguity_bert_preds.csv'\n",
     "gender_bert_df = pd.read_csv(gender_bert_path, delimiter=',')"
    ]
   },
