--- a/gender.ipynb
+++ b/gender.ipynb
@@ -386,7 +386,7 @@
     "gender_bias_df = gender_bias_df.append(noise_male_bias_df)\n",
     "gender_bias_df = gender_bias_df.append(noise_female_bias_df)\n",
     "\n",
-    "path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/gender_anaphortype_ambiguity.csv'\n",
+    "path = '../data/gender_anaphortype_ambiguity.csv'\n",
     "\n",
     "gender_bias_df.to_csv(path)"
    ]
@@ -399,29 +399,6 @@
    "source": [
     "g_df = pd.read_csv(path)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(g_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
