--- a/nonanaphoric_it.ipynb
+++ b/nonanaphoric_it.ipynb
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/non_anaphoric_it.csv'\n",
+    "path = '../data/non_anaphoric_it.csv'\n",
     "#final_df.to_csv(path)"
    ]
   }
