--- a/number.ipynb
+++ b/number.ipynb
@@ -588,7 +588,7 @@
     "final_set_df = sing_set_df.append(pl_set_df)\n",
     "final_set_df = final_set_df.append(col_set_df)\n",
     "\n",
-    "path = '/Users/vicky/Desktop/Master/Period4/NLP/resit/data/number_position_synt_role.csv'\n",
+    "path = '../data/number_position_synt_role.csv'\n",
     "\n",
     "final_set_df.to_csv(path)"
    ]
@@ -601,25 +601,6 @@
    "source": [
     "#STATISTICS\n",
     "num_df = pd.read_csv(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(num_df)) #number of total instances"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(540/3) #for each number category each grammatical role has 180 instances.\n",
-    "# a grammatical role has 540 instances across all number in total"
    ]
   },
   {
